<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/tv_app_name_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:text="@string/app_name"
        android:fontFamily="@font/jura"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="@dimen/intro_screen_image_marginTop"
        android:contentDescription="@string/image_contentDescription"
        android:src="@drawable/pets_food_schedule_illustration_edited" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
        android:text="@string/let_s_get_started_text"
        android:fontFamily="@font/jura"
        android:textStyle="bold"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/lets_get_started_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/intro_screen_text_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_text_marginTop"
        android:layout_marginEnd="@dimen/intro_screen_text_marginStartEnd"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/intro_screen_text_line_spacing_extra"
        android:text="@string/intro_text_description"
        android:fontFamily="@font/jura"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/intro_screen_text_size" />

    <Button
        android:id="@+id/intro_btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/shape_rounded_button"
        android:foreground="?attr/selectableItemBackground"
        app:backgroundTint="@null"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in"
        android:fontFamily="@font/jura"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/intro_btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/white_border_shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        app:backgroundTint="@null"
        android:backgroundTintMode="add"
        android:fontFamily="@font/jura"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold" />
</LinearLayout>