<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/feeder_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/primaryColor"
        card_view:cardCornerRadius="10dp">
        <ImageView
            android:id="@+id/feeder_image"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@drawable/food_dispenser"
            android:contentDescription="@string/food_dispenser" />
        <TextView
            android:id="@+id/feeder_info_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_dispenser"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:fontFamily="@font/jura"
            android:layout_marginStart="160dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/feeder_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_dispenser_info"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:fontFamily="@font/jura"
            android:layout_marginStart="160dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/feeder_connect_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="5dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/connect"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/water_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/feeder_card_view"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/primaryColor"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/water_image"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:contentDescription="@string/water_dispenser"
            android:src="@drawable/water_fountain" />

        <TextView
            android:id="@+id/water_info_text_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/water_dispenser"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:fontFamily="@font/jura"
            android:layout_marginStart="160dp"
            android:layout_marginTop="5dp" />
        <TextView
            android:id="@+id/water_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/water_dispenser_info"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:fontFamily="@font/jura"
            android:layout_marginStart="160dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/water_connect_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="5dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/connect"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/collar_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/water_card_view"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/primaryColor"
        card_view:cardCornerRadius="10dp">
        <ImageView
            android:id="@+id/collar_image"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@drawable/collar_image"
            android:contentDescription="@string/health_care_collar" />
        <TextView
            android:id="@+id/collar_info_text_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/health_care_collar"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:fontFamily="@font/jura"
            android:layout_marginStart="160dp"
            android:layout_marginTop="5dp"  />
        <TextView
            android:id="@+id/collar_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_care_collar_info"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:fontFamily="@font/jura"
            android:layout_marginStart="160dp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/collar_connect_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="5dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/connect"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

</RelativeLayout>