<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.FeederActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/servo_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/feeder_servo_card_marginTop"
        android:layout_marginStart="@dimen/feeder_card_marginStartEnd"
        android:layout_marginEnd="@dimen/feeder_card_marginStartEnd"
        android:backgroundTint="@color/primaryColor"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/title_open_close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/feeder_servo_card_marginTop"
            android:layout_marginStart="@dimen/feeder_servo_card_text_marginStart"
            android:fontFamily="@font/jura"
            android:text="@string/open_close"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/open_btn"
            android:layout_width="@dimen/feeder_servo_card_button_width"
            android:layout_height="@dimen/feeder_servo_card_button_height"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/open"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/close_btn"
            android:layout_width="@dimen/feeder_servo_card_button_width"
            android:layout_height="@dimen/feeder_servo_card_button_height"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="80dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/close"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/schedule_card_first_meal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/servo_card"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/feeder_card_marginStartEnd"
        android:layout_marginEnd="@dimen/feeder_card_marginStartEnd"
        android:backgroundTint="@color/primaryColor"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/title_schedule_first_meal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="1dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/jura"
            android:text="@string/schedule_first_meal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_text_quantity_first_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/secondaryColor"
            android:textColor="@color/secondaryColor"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:hint="@string/quantity_grams"/>

        <EditText
            android:id="@+id/edit_text_hour_first_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/secondaryColor"
            android:textColor="@color/secondaryColor"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:hint="@string/schedule_time"/>

        <Button
            android:id="@+id/send_first_meal_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/send"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/schedule_card_second_meal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/schedule_card_first_meal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/feeder_card_marginStartEnd"
        android:layout_marginEnd="@dimen/feeder_card_marginStartEnd"
        android:backgroundTint="@color/primaryColor"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/title_schedule_second_meal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="1dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/jura"
            android:text="@string/schedule_second_meal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_text_quantity_second_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/secondaryColor"
            android:textColor="@color/secondaryColor"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:hint="@string/quantity_grams"/>

        <EditText
            android:id="@+id/edit_text_hour_second_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/secondaryColor"
            android:textColor="@color/secondaryColor"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:hint="@string/schedule_time"/>

        <Button
            android:id="@+id/send_second_meal_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/send"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/schedule_card_third_meal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/schedule_card_second_meal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="@dimen/feeder_card_marginStartEnd"
        android:layout_marginEnd="@dimen/feeder_card_marginStartEnd"
        android:backgroundTint="@color/primaryColor"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/title_schedule_third_meal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="1dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/jura"
            android:text="@string/schedule_third_meal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_text_quantity_third_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/secondaryColor"
            android:textColor="@color/secondaryColor"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:hint="@string/quantity_grams"/>

        <EditText
            android:id="@+id/edit_text_hour_third_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/secondaryColor"
            android:textColor="@color/secondaryColor"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:hint="@string/schedule_time"/>

        <Button
            android:id="@+id/send_third_meal_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@color/white"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/send"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/disconnect_card"
        android:layout_gravity="center"
        android:layout_below="@+id/schedule_card_third_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/feeder_card_marginStartEnd"
        android:layout_marginEnd="@dimen/feeder_card_marginStartEnd"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp">

        <Button
            android:id="@+id/disconnect_feeder_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:backgroundTint="@color/white"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/disconnect"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>
</RelativeLayout>